test/test_cases/invalid/semanticErr/function/undefinedCall.wacc
# tries to assign to a function

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int f = call fun()
end
